MulotParser.py
# Generated from Mulot.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MulotParser ( Parser ):

    grammarFileName = "Mulot.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Mulot'", "'Tolum'", "'Proc'", "'('", 
                     "')'", "'Corp'", "','", "'int'", "';'", "'.'", "'='", 
                     "'new'", "'Pour'", "'a'", "'Ruop'", "'avance'", "'leve'", 
                     "'baisse'", "'tourne'", "'setY'", "'setX'", "'setColor'", 
                     "'setAngle'", "'+'", "'-'", "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "BlockComment", "INT", "ID", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_functionDeclaration = 1
    RULE_argumentList = 2
    RULE_argument = 3
    RULE_types = 4
    RULE_stat = 5
    RULE_objectCallStatement = 6
    RULE_functionCallStatement = 7
    RULE_objectCreation = 8
    RULE_exprList = 9
    RULE_assignementStatement = 10
    RULE_pourStatement = 11
    RULE_parenthèsePriority = 12
    RULE_actionCall = 13
    RULE_lowPriorityOperator = 14
    RULE_highPriorityOperator = 15
    RULE_expr = 16

    ruleNames =  [ "program", "functionDeclaration", "argumentList", "argument", 
                   "types", "stat", "objectCallStatement", "functionCallStatement", 
                   "objectCreation", "exprList", "assignementStatement", 
                   "pourStatement", "parenthèsePriority", "actionCall", 
                   "lowPriorityOperator", "highPriorityOperator", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    BlockComment=28
    INT=29
    ID=30
    WS=31
    COMMENT=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MulotParser.StatContext)
            else:
                return self.getTypedRuleContext(MulotParser.StatContext,i)


        def functionDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MulotParser.FunctionDeclarationContext)
            else:
                return self.getTypedRuleContext(MulotParser.FunctionDeclarationContext,i)


        def getRuleIndex(self):
            return MulotParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MulotParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MulotParser.T__0:
                self.state = 34
                self.match(MulotParser.T__0)


            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MulotParser.T__2:
                self.state = 37
                self.functionDeclaration()
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MulotParser.T__12 or _la==MulotParser.ID:
                self.state = 43
                self.stat()
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 49
            self.match(MulotParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MulotParser.ID, 0)

        def argumentList(self):
            return self.getTypedRuleContext(MulotParser.ArgumentListContext,0)


        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MulotParser.StatContext)
            else:
                return self.getTypedRuleContext(MulotParser.StatContext,i)


        def getRuleIndex(self):
            return MulotParser.RULE_functionDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDeclaration" ):
                return visitor.visitFunctionDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def functionDeclaration(self):

        localctx = MulotParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_functionDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(MulotParser.T__2)
            self.state = 52
            self.match(MulotParser.ID)
            self.state = 53
            self.match(MulotParser.T__3)
            self.state = 54
            self.argumentList()
            self.state = 55
            self.match(MulotParser.T__4)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MulotParser.T__12 or _la==MulotParser.ID:
                self.state = 56
                self.stat()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self.match(MulotParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgumentListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MulotParser.ArgumentContext)
            else:
                return self.getTypedRuleContext(MulotParser.ArgumentContext,i)


        def getRuleIndex(self):
            return MulotParser.RULE_argumentList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgumentList" ):
                return visitor.visitArgumentList(self)
            else:
                return visitor.visitChildren(self)




    def argumentList(self):

        localctx = MulotParser.ArgumentListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_argumentList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MulotParser.T__0 or _la==MulotParser.T__7:
                self.state = 64
                self.argument()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MulotParser.T__6:
                    self.state = 65
                    self.match(MulotParser.T__6)
                    self.state = 66
                    self.argument()
                    self.state = 71
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgumentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def types(self):
            return self.getTypedRuleContext(MulotParser.TypesContext,0)


        def ID(self):
            return self.getToken(MulotParser.ID, 0)

        def getRuleIndex(self):
            return MulotParser.RULE_argument

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgument" ):
                return visitor.visitArgument(self)
            else:
                return visitor.visitChildren(self)




    def argument(self):

        localctx = MulotParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_argument)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.types()
            self.state = 75
            self.match(MulotParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MulotParser.RULE_types

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypes" ):
                return visitor.visitTypes(self)
            else:
                return visitor.visitChildren(self)




    def types(self):

        localctx = MulotParser.TypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_types)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            _la = self._input.LA(1)
            if not(_la==MulotParser.T__0 or _la==MulotParser.T__7):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pourStatement(self):
            return self.getTypedRuleContext(MulotParser.PourStatementContext,0)


        def assignementStatement(self):
            return self.getTypedRuleContext(MulotParser.AssignementStatementContext,0)


        def functionCallStatement(self):
            return self.getTypedRuleContext(MulotParser.FunctionCallStatementContext,0)


        def objectCallStatement(self):
            return self.getTypedRuleContext(MulotParser.ObjectCallStatementContext,0)


        def objectCreation(self):
            return self.getTypedRuleContext(MulotParser.ObjectCreationContext,0)


        def getRuleIndex(self):
            return MulotParser.RULE_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = MulotParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stat)
        try:
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.pourStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.assignementStatement()
                self.state = 81
                self.match(MulotParser.T__8)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.functionCallStatement()
                self.state = 84
                self.match(MulotParser.T__8)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.objectCallStatement()
                self.state = 87
                self.match(MulotParser.T__8)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 89
                self.objectCreation()
                self.state = 90
                self.match(MulotParser.T__8)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ObjectCallStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MulotParser.ID, 0)

        def actionCall(self):
            return self.getTypedRuleContext(MulotParser.ActionCallContext,0)


        def exprList(self):
            return self.getTypedRuleContext(MulotParser.ExprListContext,0)


        def getRuleIndex(self):
            return MulotParser.RULE_objectCallStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObjectCallStatement" ):
                return visitor.visitObjectCallStatement(self)
            else:
                return visitor.visitChildren(self)




    def objectCallStatement(self):

        localctx = MulotParser.ObjectCallStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_objectCallStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(MulotParser.ID)
            self.state = 95
            self.match(MulotParser.T__9)
            self.state = 96
            self.actionCall()
            self.state = 97
            self.match(MulotParser.T__3)
            self.state = 98
            self.exprList()
            self.state = 99
            self.match(MulotParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionCallStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MulotParser.ID, 0)

        def exprList(self):
            return self.getTypedRuleContext(MulotParser.ExprListContext,0)


        def getRuleIndex(self):
            return MulotParser.RULE_functionCallStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCallStatement" ):
                return visitor.visitFunctionCallStatement(self)
            else:
                return visitor.visitChildren(self)




    def functionCallStatement(self):

        localctx = MulotParser.FunctionCallStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_functionCallStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(MulotParser.ID)
            self.state = 102
            self.match(MulotParser.T__3)
            self.state = 103
            self.exprList()
            self.state = 104
            self.match(MulotParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ObjectCreationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MulotParser.ID, 0)

        def exprList(self):
            return self.getTypedRuleContext(MulotParser.ExprListContext,0)


        def getRuleIndex(self):
            return MulotParser.RULE_objectCreation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObjectCreation" ):
                return visitor.visitObjectCreation(self)
            else:
                return visitor.visitChildren(self)




    def objectCreation(self):

        localctx = MulotParser.ObjectCreationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_objectCreation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(MulotParser.ID)
            self.state = 107
            self.match(MulotParser.T__10)
            self.state = 108
            self.match(MulotParser.T__11)
            self.state = 109
            self.match(MulotParser.T__0)
            self.state = 110
            self.match(MulotParser.T__3)
            self.state = 111
            self.exprList()
            self.state = 112
            self.match(MulotParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MulotParser.ExprContext)
            else:
                return self.getTypedRuleContext(MulotParser.ExprContext,i)


        def getRuleIndex(self):
            return MulotParser.RULE_exprList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprList" ):
                return visitor.visitExprList(self)
            else:
                return visitor.visitChildren(self)




    def exprList(self):

        localctx = MulotParser.ExprListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_exprList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MulotParser.T__3) | (1 << MulotParser.T__24) | (1 << MulotParser.INT) | (1 << MulotParser.ID))) != 0):
                self.state = 114
                self.expr(0)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MulotParser.T__6:
                    self.state = 115
                    self.match(MulotParser.T__6)
                    self.state = 116
                    self.expr(0)
                    self.state = 121
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignementStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MulotParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(MulotParser.ExprContext,0)


        def getRuleIndex(self):
            return MulotParser.RULE_assignementStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignementStatement" ):
                return visitor.visitAssignementStatement(self)
            else:
                return visitor.visitChildren(self)




    def assignementStatement(self):

        localctx = MulotParser.AssignementStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assignementStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(MulotParser.ID)
            self.state = 125
            self.match(MulotParser.T__10)
            self.state = 126
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PourStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignementStatement(self):
            return self.getTypedRuleContext(MulotParser.AssignementStatementContext,0)


        def expr(self):
            return self.getTypedRuleContext(MulotParser.ExprContext,0)


        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MulotParser.StatContext)
            else:
                return self.getTypedRuleContext(MulotParser.StatContext,i)


        def getRuleIndex(self):
            return MulotParser.RULE_pourStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPourStatement" ):
                return visitor.visitPourStatement(self)
            else:
                return visitor.visitChildren(self)




    def pourStatement(self):

        localctx = MulotParser.PourStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_pourStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(MulotParser.T__12)
            self.state = 129
            self.assignementStatement()
            self.state = 130
            self.match(MulotParser.T__13)
            self.state = 131
            self.expr(0)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MulotParser.T__12 or _la==MulotParser.ID:
                self.state = 132
                self.stat()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 138
            self.match(MulotParser.T__14)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParenthèsePriorityContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MulotParser.ExprContext,0)


        def getRuleIndex(self):
            return MulotParser.RULE_parenthèsePriority

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenthèsePriority" ):
                return visitor.visitParenthèsePriority(self)
            else:
                return visitor.visitChildren(self)




    def parenthèsePriority(self):

        localctx = MulotParser.ParenthèsePriorityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_parenthèsePriority)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(MulotParser.T__3)
            self.state = 141
            self.expr(0)
            self.state = 142
            self.match(MulotParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ActionCallContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MulotParser.RULE_actionCall

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActionCall" ):
                return visitor.visitActionCall(self)
            else:
                return visitor.visitChildren(self)




    def actionCall(self):

        localctx = MulotParser.ActionCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_actionCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MulotParser.T__15) | (1 << MulotParser.T__16) | (1 << MulotParser.T__17) | (1 << MulotParser.T__18) | (1 << MulotParser.T__19) | (1 << MulotParser.T__20) | (1 << MulotParser.T__21) | (1 << MulotParser.T__22))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LowPriorityOperatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MulotParser.RULE_lowPriorityOperator

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLowPriorityOperator" ):
                return visitor.visitLowPriorityOperator(self)
            else:
                return visitor.visitChildren(self)




    def lowPriorityOperator(self):

        localctx = MulotParser.LowPriorityOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_lowPriorityOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            _la = self._input.LA(1)
            if not(_la==MulotParser.T__23 or _la==MulotParser.T__24):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class HighPriorityOperatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MulotParser.RULE_highPriorityOperator

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHighPriorityOperator" ):
                return visitor.visitHighPriorityOperator(self)
            else:
                return visitor.visitChildren(self)




    def highPriorityOperator(self):

        localctx = MulotParser.HighPriorityOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_highPriorityOperator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            _la = self._input.LA(1)
            if not(_la==MulotParser.T__25 or _la==MulotParser.T__26):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # ExprContext
            self.right = None # ExprContext

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MulotParser.ExprContext)
            else:
                return self.getTypedRuleContext(MulotParser.ExprContext,i)


        def parenthèsePriority(self):
            return self.getTypedRuleContext(MulotParser.ParenthèsePriorityContext,0)


        def INT(self):
            return self.getToken(MulotParser.INT, 0)

        def ID(self):
            return self.getToken(MulotParser.ID, 0)

        def highPriorityOperator(self):
            return self.getTypedRuleContext(MulotParser.HighPriorityOperatorContext,0)


        def lowPriorityOperator(self):
            return self.getTypedRuleContext(MulotParser.LowPriorityOperatorContext,0)


        def getRuleIndex(self):
            return MulotParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MulotParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 32
        self.enterRecursionRule(localctx, 32, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MulotParser.T__24]:
                self.state = 151
                self.match(MulotParser.T__24)
                self.state = 152
                self.expr(6)
                pass
            elif token in [MulotParser.T__3]:
                self.state = 153
                self.parenthèsePriority()
                pass
            elif token in [MulotParser.INT]:
                self.state = 154
                self.match(MulotParser.INT)
                pass
            elif token in [MulotParser.ID]:
                self.state = 155
                self.match(MulotParser.ID)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 168
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 166
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                    if la_ == 1:
                        localctx = MulotParser.ExprContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 158
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 159
                        self.highPriorityOperator()
                        self.state = 160
                        localctx.right = self.expr(6)
                        pass

                    elif la_ == 2:
                        localctx = MulotParser.ExprContext(self, _parentctx, _parentState)
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 162
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 163
                        self.lowPriorityOperator()
                        self.state = 164
                        localctx.right = self.expr(5)
                        pass

             
                self.state = 170
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[16] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 4)
         




